complete with docker and some logic update
