# src/docs/swagger.json
@@ -155,90 +155,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"DeliveryMediumType": {
-				"type": "string",
-				"enum": [
-					"EMAIL",
-					"SMS"
-				]
-			},
-			"CodeDeliveryDetailsType": {
-				"description": "<p>The delivery details for an email or SMS message that Amazon Cognito sent for authentication or\n            verification.</p>",
-				"properties": {
-					"Destination": {
-						"type": "string",
-						"description": "<p>The email address or phone number destination where Amazon Cognito sent the code.</p>"
-					},
-					"DeliveryMedium": {
-						"$ref": "#/components/schemas/DeliveryMediumType",
-						"description": "<p>The method that Amazon Cognito used to send the code.</p>"
-					},
-					"AttributeName": {
-						"type": "string",
-						"description": "<p>The name of the attribute that Amazon Cognito verifies with the code.</p>"
-					}
-				},
-				"type": "object",
-				"additionalProperties": false
-			},
-			"ResponseMetadata": {
-				"properties": {
-					"httpStatusCode": {
-						"type": "number",
-						"format": "double",
-						"description": "The status code of the last HTTP response received for this operation."
-					},
-					"requestId": {
-						"type": "string",
-						"description": "A unique identifier for the last request sent for this operation. Often\nrequested by AWS service teams to aid in debugging."
-					},
-					"extendedRequestId": {
-						"type": "string",
-						"description": "A secondary identifier for the last request sent. Used for debugging."
-					},
-					"cfId": {
-						"type": "string",
-						"description": "A tertiary identifier for the last request sent. Used for debugging."
-					},
-					"attempts": {
-						"type": "number",
-						"format": "double",
-						"description": "The number of times this operation was attempted."
-					},
-					"totalRetryDelay": {
-						"type": "number",
-						"format": "double",
-						"description": "The total amount of time (in milliseconds) that was spent waiting between\nretry attempts."
-					}
-				},
-				"type": "object",
-				"additionalProperties": false
-			},
-			"SignUpCommandOutput": {
-				"properties": {
-					"UserConfirmed": {
-						"type": "boolean",
-						"description": "<p>A response from the server indicating that a user registration has been\n            confirmed.</p>"
-					},
-					"CodeDeliveryDetails": {
-						"$ref": "#/components/schemas/CodeDeliveryDetailsType",
-						"description": "<p>The code delivery details returned by the server response to the user registration\n            request.</p>"
-					},
-					"UserSub": {
-						"type": "string",
-						"description": "<p>The 128-bit ID of the authenticated user. This isn't the same as\n            <code>username</code>.</p>"
-					},
-					"$metadata": {
-						"$ref": "#/components/schemas/ResponseMetadata",
-						"description": "Metadata pertaining to this request."
-					}
-				},
-				"required": [
-					"$metadata"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"SignUpRequest": {
 				"properties": {
 					"username": {
@@ -330,6 +246,39 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"ResponseMetadata": {
+				"properties": {
+					"httpStatusCode": {
+						"type": "number",
+						"format": "double",
+						"description": "The status code of the last HTTP response received for this operation."
+					},
+					"requestId": {
+						"type": "string",
+						"description": "A unique identifier for the last request sent for this operation. Often\nrequested by AWS service teams to aid in debugging."
+					},
+					"extendedRequestId": {
+						"type": "string",
+						"description": "A secondary identifier for the last request sent. Used for debugging."
+					},
+					"cfId": {
+						"type": "string",
+						"description": "A tertiary identifier for the last request sent. Used for debugging."
+					},
+					"attempts": {
+						"type": "number",
+						"format": "double",
+						"description": "The number of times this operation was attempted."
+					},
+					"totalRetryDelay": {
+						"type": "number",
+						"format": "double",
+						"description": "The total amount of time (in milliseconds) that was spent waiting between\nretry attempts."
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
 			"InitiateAuthCommandOutput": {
 				"properties": {
 					"ChallengeName": {
@@ -371,19 +320,6 @@
 				"required": [
 					"username",
 					"password"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"ConfirmSignUpCommandOutput": {
-				"properties": {
-					"$metadata": {
-						"$ref": "#/components/schemas/ResponseMetadata",
-						"description": "Metadata pertaining to this request."
-					}
-				},
-				"required": [
-					"$metadata"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -589,7 +525,15 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/SignUpCommandOutput"
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
 								}
 							}
 						}
@@ -653,7 +597,15 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/ConfirmSignUpCommandOutput"
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
 								}
 							}
 						}
